# GameJamsCalendar

./: README.md
gjc-api/: .gitignore  README.md  pyproject.toml
gjc-api/gjc-api/: main.py  test_jams.py
gjc-api/gjc-api/models/: GameJamModel.py
gjc-api/gjc-api/routers/: jams.py
gjc-api/gjc-api/scraper/: GameJamsScraper.py  When.py
gjc-api/gjc-api/services/: notionapi.py
gjc-view/: README.md  package-lock.json  package.json
gjc-view/public/: index.html
gjc-view/src/: App.js  index.js
gjc-view/src/components/jams/: Jam.js  JamsGrid.js  SaveJamButton.js
gjc-view/src/components/layout/: GJCLoader.js  Header.js
gjc-view/src/components/search/: FetchForm.js
gjc-view/src/services/api/: jamsAPI.js
gjc-view/src/styles/: index.css
