[tool.poetry]
name = "gjc-api"
version = "0.1.0"
description = "Backend API used to retrieve game jams data and store it in notion databases"
authors = ["Alexandre Sparton <sparton.alexandre@gmail.com>"]
readme = "README.md"
packages = [{include = "gjc_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"
httpx = "^0.23.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
